--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,9 +10,14 @@
   "content_scripts": [
    {
      "matches": ["http://*/*"],
-     "js": ["jquery-2.2.0.min.js", "content.js"]
+     "js": ["jquery-1.11.3.js", "content.js"]
    }
  ],
+  "background": {
+    "scripts": [
+      "jquery-1.11.3.js"  
+      ]
+  },
   "browser_action": {
     "default_title": "change this font"
   },
